--- a/src/Home.css
+++ b/src/Home.css
@@ -1,8 +1,7 @@
 /* Home.css */
 
 body {
-  background: linear-gradient(to bottom right, #8a2be2, #530bc7);
-  overflow: scroll;
+  background: linear-gradient(to bottom right, #f2470e, #530bc7);
 }
 
 .home-container {
@@ -12,23 +11,26 @@ body {
   padding: 20px;
   text-align: center;
   max-width: 100%;
+  max-height: 100%;
 }
 
 .header {
   flex: 1;
   margin-right: 20px;
   text-align: left;
-  max-width: 40vw;
+  max-width: 60vw;
 }
 
 .header h1 {
   font-weight: bold;
-  font-size: 50px;
+  font-size: 72px;
+  text-align: center;
 }
 
 .header p {
-  font-size: 32px;
+  font-size: 40px;
   color: white;
+  text-align: center;
 }
 
 .home-image {
