--- a/src/MyWork.css
+++ b/src/MyWork.css
@@ -1,28 +1,45 @@
-/* MyWork.css */
-
 .my-work-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
   padding: 20px;
   text-align: center;
-  height: 100vh; /* Set the height to full viewport height */
-  background-attachment: fixed; /* Prevent background from scrolling */
+  height: 100vh;
+  background-attachment: fixed;
 }
 
 .work-title {
   font-weight: bold;
   font-size: 24px;
   margin-bottom: 20px;
+  padding: 10px 20px; /* Added padding for the work-title */
+  border: 2px solid pink; /* Border color for the work-title */
+  border-radius: 20px; /* Rounded corners for the work-title */
+  background-color: teal; /* Background color for the work-title */
+}
+
+.work-items {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .work-item {
-  margin-bottom: 40px;
+  margin-bottom: 0;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px; /* Added padding for the work-item containers */
+  border: 2px solid pink; /* Border color for the work-item containers */
+  border-radius: 20px; /* Rounded corners for the work-item containers */
+  background-color: teal; /* Background color for the work-item containers */
 }
 
 .work-item img {
-  width: 100%; /* Make the image fill the container */
-  max-width: 300px; /* Set a maximum width for the image */
+  width: 100%;
+  max-width: 300px;
   border-radius: 10px;
   margin-bottom: 10px;
 }
