--- a/src/Home.css
+++ b/src/Home.css
@@ -1,19 +1,19 @@
-/* Home.css */
-
-body {
-  background: linear-gradient(to bottom right, #f2470e, #530bc7);
+body, html {
+  min-height: 100vh; /* Ensure background color stretches to the bottom */
+  margin: 0; /* Remove default margin */
+  padding: 0; /* Remove default padding */
 }
 
 .home-container {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 20px;
   text-align: center;
-  max-width: 100%;
-  max-height: 100%;
-  height: 100vh; /* Set the height to full viewport height */
+  max-height: 100vh; /* Set the minimum height to full viewport height */
+  height: 90vh;
   background-attachment: fixed; /* Prevent background from scrolling */
+  background: linear-gradient(to bottom right, #a708e6, #3e0143);
+  overflow: -moz-hidden-unscrollable;
 }
 
 .header {
@@ -27,6 +27,7 @@ body {
   font-weight: bold;
   font-size: 72px;
   text-align: center;
+  color: white;
 }
 
 .header p {
@@ -37,6 +38,7 @@ body {
 
 .home-image {
   max-width: 50vw;
+  margin-bottom: 5vh;
 }
 
 @media screen and (max-width: 768px) {
@@ -44,7 +46,6 @@ body {
     flex-direction: column; /* Stack items vertically for screens up to 768px width */
     align-items: center; /* Center items horizontally */
   }
-
 
   .header {
     margin-bottom: 20px; /* Add some spacing between the header and the image */
@@ -55,4 +56,3 @@ body {
     max-width: 100%; 
   }
 }
-
