--- a/src/MyWork.css
+++ b/src/MyWork.css
@@ -7,6 +7,7 @@
   text-align: center;
   height: 100vh;
   background-attachment: fixed;
+  background: linear-gradient(to bottom right, #a48ad4, #6a0572);
 }
 
 .work-title {
@@ -33,7 +34,7 @@
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  border: 2px solid pink;
+  border: 3px solid pink;
   border-radius: 20px;
   background-color: white;
 }
