--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  min-height: 100vh;
   background-color: #d9adf7;
   font-family: 'TT Interphases', Arial, sans-serif;
 }
@@ -9,6 +10,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+  height: 10vh;
   background-color: #8a2be2;
   color: white;
 }
@@ -40,7 +42,7 @@ body {
   text-decoration: underline; /* Underline the navbar links on hover */
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (orientation: portrait) {
   .menu-icon {
     display: block;
     font-size: 1.8rem;
