--- a/src/SocialMediaIcons.css
+++ b/src/SocialMediaIcons.css
@@ -1,12 +1,23 @@
 .social-icons {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 5px;
 }
 
 .social-icons i {
-  font-size: 40px;
-  color: white; /* Icon color */
+  font-size: 35px;
+  color: white;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: border 0.3s fade-in; 
+}
+
+.social-icons i:hover {
+  border: 2px solid white;
+  border-radius: 50%;
 }
 
 @media screen and (max-width: 768px) {
