--- a/src/Contact.css
+++ b/src/Contact.css
@@ -1,7 +1,8 @@
 /* Contact.css */
-
-body {
-  background: linear-gradient(to bottom right, #8a2be2, #4b0082);
+body, html {
+  min-height: 100vh; /* Ensure background color stretches to the bottom */
+  margin: 0; /* Remove default margin */
+  padding: 0; /* Remove default padding */
 }
 
 .contact-container {
@@ -10,7 +11,7 @@ body {
   align-items: center;
   padding: 20px;
   text-align: center;
-  height: 100vh; /* Set the height to full viewport height */
+  height: 90vh; /* Set the height to full viewport height */
   background-attachment: fixed; /* Prevent background from scrolling */
 }
 
