--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   min-height: 100vh;
   background-color: #d9adf7;
-  font-family: 'TT Interphases', Arial, sans-serif;
+  font-family: 'Inter', Arial, sans-serif;
 }
 
 .navbar {
@@ -53,7 +53,7 @@ body {
     flex-direction: column;
     position: absolute;
     width: 100%;
-    top: 130px;
+    top: 10vh;
     left: 0;
     background-color: #8a2be2;
     padding: 20px 0;
