--- a/src/RecentUpdates.css
+++ b/src/RecentUpdates.css
@@ -18,6 +18,8 @@ body, html {
 .recent-updates-info {
   flex: 1;
   margin-right: 20px;
+  font-size: 40px;
+  text-align: center;
 }
 
 .update-container {
