--- a/src/SocialMediaIcons.css
+++ b/src/SocialMediaIcons.css
@@ -20,7 +20,7 @@
   border-radius: 50%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (orientation: portrait) {
   .social-icons {
     display: none;
   }
