--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   min-height: 100vh;
-  background-color: #d9adf7;
+  background-color: #FFFFFF;
   font-family: 'Inter', Arial, sans-serif;
 }
 
@@ -11,8 +11,8 @@ body {
   align-items: center;
   padding: 10px;
   height: 10vh;
-  background-color: #8a2be2;
-  color: white;
+  background-color: #E9E8E6;
+  color: black;
 }
 
 .logo img {
@@ -32,7 +32,7 @@ body {
 }
 
 .nav-links a {
-  color: white;
+  color: grey;
   text-decoration: none;
   font-size: 1.5rem;
   position: relative;
@@ -40,6 +40,7 @@ body {
 
 .nav-links a:hover {
   text-decoration: underline; /* Underline the navbar links on hover */
+  color: black;
 }
 
 @media screen and (orientation: portrait) {
