--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -36,11 +36,27 @@ body {
   text-decoration: none;
   font-size: 1.5rem;
   position: relative;
+  transition: color 0.3s ease-in-out; /* Add color transition */
+}
+
+.nav-links a::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -5px; /* Adjust the distance from the text */
+  width: 0;
+  height: 2px;
+  background-color: purple;
+  transition: width 0.3s ease-in-out; /* Add width transition */
 }
 
 .nav-links a:hover {
-  text-decoration: underline; /* Underline the navbar links on hover */
   color: black;
+}
+
+.nav-links a:hover::after,
+.nav-links a.active::after {
+  width: 100%; /* Set width to 100% on hover or for the active link */
 }
 
 @media screen and (orientation: portrait) {
