--- a/src/SocialMediaIcons.css
+++ b/src/SocialMediaIcons.css
@@ -5,14 +5,15 @@
 }
 
 .social-icons i {
-  font-size: 35px;
+  font-size: 25px;
   color: black;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
   transition: border 0.3s fade-in; 
+  margin-top: 3vh;
 }
 
 .social-icons i:hover {
