--- a/src/Contact.css
+++ b/src/Contact.css
@@ -7,45 +7,101 @@ body, html {
 
 .contact-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+  align-items: flex-start;
   padding: 20px;
-  text-align: center;
   height: 90vh;
   background-attachment: fixed;
 }
 
-.contact-title {
-  font-weight: bold;
-  font-size: 48px;
-  margin-bottom: 20px;
+.contact-links {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 20px;
 }
 
 .contact-section {
   margin-top: 10px;
   display: flex;
-  flex-direction: row;
   align-items: center;
-  justify-content: space-between;
-  border: 5px solid black;
-  border-radius: 10px;
-  padding: 20px; /* Adjusted padding size */
-  background-color: white;
-  flex: 1;
+  padding: 10px;
+  text-decoration: none;
+}
+
+.icon-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: lightpink;
+  border: 2px solid purple;
+  margin-right: 10px;
 }
 
 .icon {
-  margin-bottom: 10px;
-  font-size: 36px;
+  font-size: 24px;
+  color: black;
 }
 
 .contact-section p {
-  margin: 20px;
-  font-size: 24px;
+  margin: 10px;
+  font-size: 18px;
 }
 
-.contact-info {
+.contact-form {
+  width: 60%;
+}
+
+.contact-form h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.contact-form form {
   display: flex;
-  gap: 20px;
-  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.contact-form label {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+/* Adjustments for the name and email fields */
+.contact-form .name-email-container {
+  display: flex;
+  gap: 10px;
+}
+
+.contact-form input[type="text"],
+.contact-form input[type="email"] {
+  flex: 1;
+  padding: 8px;
+  font-size: 14px; /* Adjust the font size for name and email fields */
+  background-color: #f2f2f2;
+  border: 1px solid #ccc;
+}
+
+.contact-form textarea {
+  margin-bottom: 10px;
+  padding: 8px;
+  font-size: 16px;
+  background-color: #f2f2f2;
+  border: 1px solid #ccc;
+}
+
+.contact-form button {
+  padding: 10px;
+  font-size: 18px;
+  background-color: #E9E8E6;
+  border: none;
+  cursor: pointer;
+  color: black;
+}
+
+.contact-form button:hover {
+  background-color: lightpink;
 }
