--- a/src/SocialMediaIcons.css
+++ b/src/SocialMediaIcons.css
@@ -12,12 +12,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: border 0.3s fade-in; 
-  margin-top: 3vh;
+  transition: color 0.3s ease;
 }
 
 .social-icons i:hover {
-  box-shadow: 0 0 8px rgba(33,33,33,.2);
+  color: purple;
 }
 
 @media screen and (orientation: portrait) {
