--- a/src/Contact.css
+++ b/src/Contact.css
@@ -11,6 +11,7 @@ body, html {
 
 .contact-header {
   margin-bottom: 20px;
+  margin-top: 50px;
 }
 
 .contact-header h1 {
@@ -31,7 +32,7 @@ body, html {
   justify-content: space-between;
   align-items: flex-start;
   padding: 20px;
-  height: 90vh;
+  height: 60vh;
   background-attachment: fixed;
 }
 
@@ -39,7 +40,7 @@ body, html {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-left: 20px;
+  margin-left: 80px;
   margin-top: 50px;
 }
 
@@ -75,6 +76,7 @@ body, html {
 
 .contact-form {
   width: 60%;
+  margin-right: 50px;
 }
 
 .contact-form h2 {
@@ -131,4 +133,11 @@ body, html {
 
 .contact-form button:hover {
   background-color: pink;
+}
+
+.leaflet-map {
+  width: 90%;
+  height: 400px; /* Set the desired height for your map */
+  border: 2px solid purple;
+  margin: 20px auto;
 }
