Trying to fix the Recent Updates page, work in progress

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -31,6 +31,7 @@ body {
   display: flex;
   gap: 30px; /* Increase the gap between navbar links */
   align-items: center; /* Center the items vertically */
+  margin-right: 120px;
 }
 
 .nav-links a {
