--- a/src/RecentUpdates.css
+++ b/src/RecentUpdates.css
@@ -37,6 +37,7 @@ body, html {
 .recent-updates-info {
   width: 48%; /* Adjusted width to leave space for updates */
   margin-bottom: 20px; /* Add margin at the bottom to separate from the updates */
+  margin-right: 10px; /* Adjusted margin to bring the image closer to the center */
 }
 
 .recent-updates-info h2 {
@@ -49,12 +50,15 @@ body, html {
   display: flex;
   flex-direction: column; /* Arrange updates in a column */
   gap: 20px;
+  margin-left: 10px; /* Adjusted margin to bring the image closer to the center */
+  margin-right: 10px; /* Added margin to the right */
+  justify-content: center; /* Center updates vertically */
 }
 
 .recent-updates-info img {
   width: 100%; /* Make the image take full width */
-  max-width: 300px; /* Limit the max width of the image as needed */
-  margin-right: 20px; /* Add margin to the right to separate from the updates */
+  max-width: 400px; /* Limit the max width of the image as needed */
+  margin: 0 auto; /* Center the image */
 }
 
 .update {
