Added margin separating header from content

--- a/src/RecentUpdates.css
+++ b/src/RecentUpdates.css
@@ -14,11 +14,12 @@ body, html {
   text-align: left;
   height: 90vh;
   background-attachment: fixed;
+  margin-top: 50px;
 }
 
 .contact-header {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
 }
 
 .contact-header h1 {
