--- a/src/Home.css
+++ b/src/Home.css
@@ -9,6 +9,7 @@ body, html {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between; /* Added to create space between the two divs */
   text-align: center;
   max-height: 100vh;
   height: 90vh;
@@ -18,9 +19,11 @@ body, html {
 
 .header {
   flex: 1;
-  margin-right: 20px;
   text-align: left;
   max-width: 60vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center the items horizontally */
 }
 
 .header h1 {
@@ -37,6 +40,7 @@ body, html {
 }
 
 .about-button {
+  margin-top: 20px; /* Added margin to separate the button from the text */
   display: inline-block;
   padding: 15px 30px;
   font-size: 24px;
