--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -69,3 +69,19 @@
   font-size: 18px;
   color: #555;
 }
+
+.my-work-button {
+  margin-top: 20px; /* Added margin to separate the button from the text */
+  display: inline-block;
+  padding: 15px 30px;
+  font-size: 24px;
+  text-decoration: none;
+  color: black;
+  background-color: pink;
+  border-radius: 25px;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.my-work-button:hover {
+  background-color: #ff66b2; /* Darker pink on hover */
+}
