--- a/src/pages/MyWork.css
+++ b/src/pages/MyWork.css
@@ -56,6 +56,7 @@ body, html {
   flex-direction: row;
   justify-content: space-around;
   margin-top: 50px;
+  margin-bottom: 30px;
 }
 
 .work-item {
@@ -86,6 +87,24 @@ body, html {
 .work-item p {
   font-size: 16px;
   color: #555;
+}
+
+.updates-button {
+  margin-top: auto; /* Remove the margin-top property */
+  display: block; /* Change to block to take full width */
+  width: fit-content; /* Adjust width based on content */
+  margin: 0 auto; /* Center the button horizontally */
+  padding: 15px 30px;
+  font-size: 24px;
+  text-decoration: none;
+  color: black;
+  background-color: pink;
+  border-radius: 25px;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.updates-button:hover {
+  background-color: #ff66b2; /* Darker pink on hover */
 }
 
 /* Media Query for Portrait Mode */
