--- a/src/pages/MyWork.css
+++ b/src/pages/MyWork.css
@@ -1,3 +1,5 @@
+/* MyWork.css */
+
 body, html {
   min-height: 100vh;
   margin: 0;
@@ -14,6 +16,18 @@ body, html {
   height: 90vh;
   background-attachment: fixed;
   animation: riseUp 1s ease-out; /* Apply the translateY animation */
+}
+
+/* Add keyframes for the grow animation */
+@keyframes grow {
+  from {
+    transform: scaleX(0); /* Start with zero width */
+    opacity: 0;
+  }
+  to {
+    transform: scaleX(1); /* Grow to full width */
+    opacity: 1;
+  }
 }
 
 /* Add keyframes for the translateY animation */
@@ -57,6 +71,7 @@ body, html {
   justify-content: space-around;
   margin-top: 50px;
   margin-bottom: 30px;
+  animation: grow 1s ease-out; /* Apply the grow animation */
 }
 
 .work-item {
@@ -69,6 +84,7 @@ body, html {
   border: 3px solid pink;
   border-radius: 20px;
   background-color: white;
+  animation: grow 1s ease-out; /* Apply the grow animation */
 }
 
 .work-item img {
