--- a/src/pages/RecentUpdates.css
+++ b/src/pages/RecentUpdates.css
@@ -97,3 +97,52 @@ body, html {
 .contact-button:hover {
   background-color: #ff66b2; /* Darker pink on hover */
 }
+
+@keyframes riseUp {
+  from {
+    opacity: 0;
+    transform: translateY(20%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.recent-updates-container,
+.contact-header,
+.header-line,
+.recent-updates-info,
+.update-container,
+.contact-button {
+  opacity: 0; /* Set initial opacity to 0 */
+  animation: riseUp 1s ease-out forwards; /* Apply the translateY animation with forwards to keep the final state */
+}
+
+.recent-updates-container {
+  animation-delay: 0.2s; /* Apply a delay to the container */
+}
+
+.contact-header {
+  animation-delay: .4s; /* Apply a delay to the header */
+}
+
+.header-line {
+  animation-delay: .6s; /* Apply a delay to the header line */
+}
+
+.recent-updates-info {
+  animation-delay: .8s; /* Apply a delay to the info section */
+}
+
+.update-container {
+  animation-delay: 1s; /* Apply a delay to the update container */
+}
+
+.contact-button {
+  animation-delay: 1.5s; /* Apply a delay to the contact button */
+}
+
+.contact-button:hover {
+  background-color: #ff66b2;
+}
