--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -20,7 +20,7 @@ body, html {
 .header {
   flex: 1;
   text-align: left;
-  max-width: 60vw;
+  max-width: 70vw;
   display: flex;
   flex-direction: column;
   align-items: center; /* Center the items horizontally */
@@ -38,10 +38,11 @@ body, html {
   font-size: 40px;
   color: black;
   text-align: center;
+  margin-top: 5%;
 }
 
 .about-button {
-  margin-top: 20px; /* Added margin to separate the button from the text */
+  margin-top: 8%; /* Added margin to separate the button from the text */
   display: inline-block;
   padding: 15px 30px;
   font-size: 24px;
@@ -57,26 +58,46 @@ body, html {
 }
 
 .home-image {
-  max-width: 50vw;
-  margin-bottom: 5vh;
-  animation: riseUp 1s ease-out; /* Animation for the image */
+  max-width: 28vw;
 }
 
 @media screen and (max-width: 768px) {
+  .body {
+    overflow: hidden;
+  }
+
   .home-container {
     flex-direction: column;
     align-items: center;
-  }
-
-  .header {
-    margin-bottom: 20px;
+    max-height: 80vh;
+    margin-top: 5%;
   }
 
   .home-image {
-    object-fit: contain;
+    order: 1;
+    max-width: 30%;
+    animation: riseUp 1s ease-out;
+    margin-top: 5%;
+  }
+
+  .header h1 {
+    font-size: 1.5rem; 
     max-width: 100%;
   }
+
+  .header p {
+    font-size: 1rem; 
+  }
+
+  .about-button {
+    order: 2;
+    margin-top: 1.5rem; 
+    font-size: 1rem;
+  }
 }
+
+
+
 
 /* New keyframes for header scaling animation */
 @keyframes headerScale {
