--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -118,7 +118,7 @@
     margin-bottom: 1rem;
     animation: riseUp 1s ease-out;
     margin: 0 auto;
-    max-width: 30%;
+    max-width: 60%;
   }
 
   .about-text {
@@ -131,6 +131,8 @@
     order: 2;
     margin-top: 10%; /* Adjusted margin */
     position: static; /* Remove absolute positioning */
-    margin: 0 auto;
-  }
+    font-size: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+    }
 }
