--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -120,7 +120,7 @@ body {
   .nav-links a:hover::after,
   .nav-links a.active::after,
   .nav-links a.active-link::after {
-    background-color: purple; /* Hide the dividing line on hover, active, and active-link states */
+    background-color: purple; 
     width: 100%;
   }
 }
