--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -123,16 +123,18 @@ body, html {
   flex: 1;
   padding: 8px;
   font-size: 14px; /* Adjust the font size for name and email fields */
-  background-color: #f2f2f2;
+  background-color: white;
   border: 1px solid #ccc;
+  border-radius: 10px;
 }
 
 .contact-form textarea {
   margin-bottom: 10px;
   padding: 8px;
   font-size: 16px;
-  background-color: #f2f2f2;
+  background-color: white;
   border: 1px solid #ccc;
+  border-radius: 10px;
 }
 
 .contact-form button {
@@ -190,7 +192,7 @@ body, html {
 
   .contact-form .name-email-container {
     flex-direction: column;
-    gap: 3px;
+    gap: 0px;
   }
 
   .contact-form input[type="text"],
@@ -200,6 +202,7 @@ body, html {
     font-size: 16px;
     background-color: #f2f2f2;
     border: 1px solid #ccc;
+    border-radius: 10px;
   }
 
   .contact-form textarea {
@@ -207,6 +210,7 @@ body, html {
     font-size: 16px;
     background-color: #f2f2f2;
     border: 1px solid #ccc;
+    border-radius: 10px;
   }
 
   .contact-form button {
