--- a/src/pages/Publications.css
+++ b/src/pages/Publications.css
@@ -7,7 +7,7 @@
 }
 
 .works-title {
-  font-size: 28px;
+  font-size: 24px;
   font-weight: bold;
   margin-bottom: 20px;
 }
@@ -58,4 +58,13 @@
   margin-top: 30px;
   animation: riseUp 1s ease-out;
   margin-bottom: 40px;
+}
+
+.blue-link {
+  color: #007bff; /* Blue color */
+  text-decoration: underline;
+}
+
+.blue-link:visited {
+  color: #551a8b; /* Change the color for visited links */
 }
