--- a/src/pages/ToolsandModels.css
+++ b/src/pages/ToolsandModels.css
@@ -42,6 +42,22 @@
   border-radius: 1px;
 }
 
+.section-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  margin-top: 3%;
+  text-align: center;
+}
+
+.section-subtitle {
+  font-size: 18px;
+  color: #555;
+  animation: riseUp 1s ease-out;
+  width: 80%;
+  margin: auto;
+}
+
 /* Media Query for Portrait Mode */
 @media screen and (orientation: portrait) {
   .work-items {
@@ -55,7 +71,11 @@
     width: 100%; /* Take full width in portrait mode */
   }
 
-  .header-line {
-    width: 100vw;
+  .section-title {
+    margin-top: 5%;
+  }
+
+  .section-subtitle {
+    width: 100%;
   }
 }
