Deleted conflicting animation code

--- a/src/pages/ToolsandModels.css
+++ b/src/pages/ToolsandModels.css
@@ -79,3 +79,14 @@
     width: 100%;
   }
 }
+
+@keyframes tools-riseUp {
+  from {
+    transform: translateY(20%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
